syntax = "proto3";

package customer_customer_demo;

option go_package = "northwind/proto/customer_customer_demo";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "typespb.proto";


service CustomerCustomerDemo {
    
    rpc Customer(CustomerRequest) returns (typespb.Customer) {
        option (google.api.http) = {
            get: "/v1/customer/{customerID}/customer-type/{customerTypeID}/customer-customer-demo/customer"
            
        };
    }
    
    rpc CustomerCustomerDemoByCustomerIDCustomerTypeID(CustomerCustomerDemoByCustomerIDCustomerTypeIDRequest) returns (typespb.CustomerCustomerDemo) {
        option (google.api.http) = {
            get: "/v1/customer/{customerID}/customer-type/{customerTypeID}/customer-customer-demo"
            
        };
    }
    
    rpc CustomerDemographic(CustomerDemographicRequest) returns (typespb.CustomerDemographic) {
        option (google.api.http) = {
            get: "/v1/customer/{customerID}/customer-type/{customerTypeID}/customer-customer-demo/customer-demographic"
            
        };
    }
    
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/customer/{customerID}/customer-type/{customerTypeID}/customer-customer-demo"
            
        };
    }
    
    rpc Insert(InsertRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/customer/{customerID}/customer-type/{customerTypeID}/customer-customer-demo"
            
        };
    }
    
}

message CustomerRequest { 
    string customerID = 1;
    string customerTypeID = 2;
}

message CustomerCustomerDemoByCustomerIDCustomerTypeIDRequest { 
    string customerID = 1;
    string customerTypeID = 2;
}

message CustomerDemographicRequest { 
    string customerID = 1;
    string customerTypeID = 2;
}

message DeleteRequest { 
    string customerID = 1;
    string customerTypeID = 2;
}

message InsertRequest { 
    string customerID = 1;
    string customerTypeID = 2;
}
